# etl-benchmark-pandas-spark-duckdb-polars

./: .gitignore  README.md  benchmark.py  pyproject.toml  requirements.txt
data/: generate_data.py
notebooks/: duckdb_etl.py  modin_etl.py  pandas_etl.py  polars_etl.py  spark_etl.py
