[project]
name = "etl-benchmark-pandas-spark-duckdb-polars"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.2",
    "modin[all]>=0.35.0",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "polars>=1.32.3",
    "pyspark>=4.0.0",
]
